--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, minmax(0px, 1fr));
   width: 50%;
-
 }
 
 .product {
@@ -15,6 +14,8 @@ body {
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  height: fit-content;
+  max-height: max-content;
 
 .product h2 {
   margin-top: 0;
